// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds quote views > decrements quote count when a quote is deleted 1`] = `
{
  "posts": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": {
        "$type": "app.bsky.embed.images#view",
        "images": [
          {
            "alt": "../dev-env/assets/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(2)",
            "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(2)",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(0)",
          "val": "test-label",
        },
        {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(0)",
          "val": "test-label-2",
        },
      ],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.images",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "image": {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": {
                  "$link": "cids(2)",
                },
                "size": 4114,
              },
            },
          ],
        },
        "reply": {
          "parent": {
            "cid": "cids(3)",
            "uri": "record(1)",
          },
          "root": {
            "cid": "cids(3)",
            "uri": "record(1)",
          },
        },
        "text": "hear that label_me label_me_2",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
  ],
}
`;

exports[`pds quote views > does not return post when quote is deleted 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "posts": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "eve.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": {
        "$type": "app.bsky.embed.record#view",
        "record": {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(2)",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": [
              {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-a",
              },
              {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-b",
              },
            ],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [
            {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(1)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 1,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(1)",
          "value": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": [
                {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "qUoTe 2",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
  ],
  "uri": "record(1)",
}
`;

exports[`pds quote views > fetches post quotes 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "posts": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "eve.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": {
        "$type": "app.bsky.embed.record#view",
        "record": {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(2)",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": [
              {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-a",
              },
              {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-b",
              },
            ],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [
            {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(1)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 2,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(1)",
          "value": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": [
                {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "qUoTe 2",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "eve.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(4)",
      "embed": {
        "$type": "app.bsky.embed.record#view",
        "record": {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(2)",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": [
              {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-a",
              },
              {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-b",
              },
            ],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [
            {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(1)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 2,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(1)",
          "value": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": [
                {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "qUoTe 1",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(3)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
  ],
  "uri": "record(1)",
}
`;
